Fix don't shrink icons when text is too long

--- a/packages/react-components/src/tree/tree.module.css
+++ b/packages/react-components/src/tree/tree.module.css
@@ -31,6 +31,7 @@
 
 .tree-row .icon {
   width: 16px;
+  flex: 0 0 16px;
   display: flex;
   align-items: center;
 }
